--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ img{
     position: relative;
     padding: 15px;
     left: 90px;
+    height: 150px;
 }
 div{
     text-align: center;
@@ -40,4 +41,10 @@ h1{
 footer{
     background-color: rgb(94, 92, 89);
     text-align: center;
+}
+.chart{
+    
+    background: radial-gradient(#488150, transparent);
+
+
 }
